# Minimal-CMake

./: .clang-format  .gitignore  Minimal CMake.code-workspace  README.md  minimal-cmake.code-workspace
.github/workflows/: cmake.yml
ch10/: README.md
ch10/part-1/: README.md
ch10/part-1/app/: .gitignore  CMakeLists.txt  CTestCustom.cmake.in  configure-default-and-build.bat  configure-default-and-build.sh  configure-default.bat  generate-icons.sh  gol.icns  info.plist  run.sh
ch10/part-1a/: README.md
ch10/part-1a/app/: .gitignore
ch10/part-2/: README.md
ch10/part-2/app/: CMakeLists.txt  configure-build-package-linux.sh  configure-build-package-windows.bat  configure-build-package-windows.sh
ch10/part-3/: README.md
ch10/part-3/app/: CMakeLists.txt  configure-build-package-windows.bat
ch10/part-3/app/packaging/: info.plist
ch10/part-3/app/packaging/linux/: mc-gol.desktop
ch10/part-3/app/packaging/macos/: generate-icons.sh
ch10/part-3/app/packaging/windows/: icon.rc
ch10/part-3a/: README.md
ch10/part-3a/app/: CMakeLists.txt  configure-build-package-macos.sh
ch10/part-4/: README.md
ch10/part-4/app/: CMakeLists.txt  CMakePresets.json
ch10/part-5/: README.md
ch10/part-5/app/: .gitignore  CMakeLists.txt  CMakePresets.json
ch11/: README.md
ch11/part-1/: README.md
ch11/part-1/app/: CMakeLists.txt  CMakePresets.json
ch11/part-2/: README.md
ch11/part-2/app/: CMakeLists.txt  CTestConfig.cmake  configure-build-package-macos.sh
ch11/part-2/app/src/viewport/: screen.cpp
ch11/part-3/: README.md
ch11/part-3/app/: CMakeLists.txt  CMakePresets.json
ch11/part-3/app/cmake/: compile-shader-windows.cmake
ch11/part-3/app/packaging/macos/: custom_DS_Store
ch11/part-3/app/tests/: CMakeLists.txt
ch11/part-4/: README.md
ch11/part-4/app/: CMakeLists.txt  CMakePresets.json
ch11/part-4/app/tests/: CMakeLists.txt  shaders-compiled.cmake
ch2/: README.md
ch2/part-1/: CMakeLists.txt  README.md  main.c
ch2/part-1/project/: main.c
ch2/part-2/: CMakeLists.txt  README.md  main.c
ch2/part-2/project/: CMakeLists.txt
ch2/part-3/: CMakeLists.txt  README.md
ch2/part-3/array/: array.h
ch2/part-3/project/: CMakeLists.txt  main.c
ch3/: README.md
ch3/part-1/: CMakeLists.txt  README.md
ch3/part-2/: CMakeHelpers.cmake  CMakeLists.txt  README.md
ch3/part-2/array/: array.c
ch3/part-3/: CMakeLists.txt  README.md
ch3/part-4/: CMakeLists.txt  README.md
ch3/part-5/: CMakeLists.txt  README.md  main.c
ch3/part-6/: CMakeLists.txt  README.md  main.c
ch3/part-7/: CMakeLists.txt  README.md  main.c
ch3/part-7/array/: array.c
ch4/: README.md
ch4/part-1/: README.md
ch4/part-1/app/: CMakeLists.txt  main.c
ch4/part-1/lib/array/: CMakeLists.txt
ch4/part-1/lib/array/include/minimal-cmake/: array.h
ch4/part-1/lib/array/src/: array.c
ch4/part-2/: README.md
ch4/part-2/app/: CMakeLists.txt
ch4/part-2/lib/gol/: CMakeLists.txt
ch4/part-2/lib/gol/include/minimal-cmake-gol/: gol.h
ch4/part-2/lib/gol/src/: gol.c
ch4/part-3/: README.md
ch4/part-3/app/: CMakeLists.txt
ch4/part-3/lib/gol/: CMakeLists.txt
ch4/part-3/lib/gol/include/minimal-cmake-gol/: gol.h
ch4/part-3/lib/gol/src/: gol.c
ch4/part-4/: README.md
ch4/part-4/app/: CMakeLists.txt
ch4/part-5/: README.md
ch4/part-5/app/: CMakeLists.txt  main.c
ch4/part-5/lib/array/: CMakeLists.txt
ch4/part-6/: README.md
ch4/part-6/app/: CMakeLists.txt
ch4/part-6/lib/gol/: CMakeLists.txt
ch4/part-6/lib/gol/src/: gol.c
ch5/: README.md
ch5/part-1/: README.md
ch5/part-2/: README.md
ch5/part-2/app/: CMakePresets.json
ch5/part-3/: README.md
ch5/part-3/app/: CMakeLists.txt  CMakeUserPresets.json.example
ch5/part-4/: README.md
ch5/part-4/app/: CMakeLists.txt  CMakePresets.json  main.c
ch5/part-5/: README.md
ch6/: README.md
ch6/part-1/: README.md
ch6/part-2/: README.md
ch6/part-3/: README.md
ch6/part-4/: README.md
ch7/: README.md
ch7/part-1/: README.md
ch7/part-1/lib/array/: CMakeLists.txt  configure-default.bat  configure-default.sh
ch7/part-2/: README.md
ch7/part-3/: README.md
ch7/part-4/: README.md
ch7/part-4/app/: CMakeLists.txt  CMakePresets.json  configure-default.bat  configure-default.sh  main.c  pos-color-vertex.c
ch7/part-4/lib/draw/: CMakeLists.txt  mc-draw-config.cmake.in
ch7/part-4/lib/draw/include/minimal-cmake/draw/: pos-color-line.h  pos-color-vertex.h
ch7/part-4/lib/draw/install/include/: as-ops.h  as-types.h  mc_draw_export.h
ch7/part-4/lib/draw/install/lib/: libmc-drawd.dylib
ch7/part-4/lib/draw/install/lib/cmake/as-c-math/: as-c-math-config-debug.cmake  as-c-math-config.cmake
ch7/part-4/lib/draw/install/lib/cmake/mc-draw/: mc-draw-config.cmake  mc-draw-targets-debug.cmake  mc-draw-targets.cmake
ch7/part-4/lib/draw/src/: pos-color-line.c
ch7/part-4/lib/gol/: CMakeLists.txt
ch7/part-5/: README.md
ch7/part-6/: README.md
ch7/part-7/: README.md
ch7/part-7/app/: CMakeLists.txt  CMakePresets.json  configure-default.sh  main.c
ch7/part-n/lib/array/: CMakeLists.txt
ch7/part-n/lib/array/src/: array.c
ch8/: README.md
ch8/part-1/: README.md
ch8/part-2/: README.md
ch8/part-3/: README.md
ch8/part-4/: README.md
ch8/part-4/app/: CMakeLists.txt  CMakePresets.json  configure-default-and-build.bat  configure-default.bat  configure-default.sh
ch8/part-4/app/cmake/: compile-shader-linux.cmake  compile-shader-macos.cmake  compile-shader-windows.cmake  superbuild.cmake
ch8/part-4/lib/draw/: CMakeLists.txt
ch8/part-4a/: README.md
ch8/part-5/: README.md
ch9/: README.md
ch9/part-1/: README.md
ch9/part-2/: README.md
ch9/part-2/app/: CMakeLists.txt  imgui.ini  main.cpp
ch9/part-2/app/tests/: gol-tests.cpp
ch9/part-3/: README.md
ch9/part-4/: README.md
ch9/part-4/app/: CMakeLists.txt  main.cpp
ch9/part-4/app/imgui/bgfx/: imgui_impl_bgfx.cpp
ch9/part-4/app/src/: main.cpp
ch9/part-4/app/src/imgui/bgfx/: imgui_impl_bgfx.cpp  imgui_impl_bgfx.h
ch9/part-4/app/src/viewport/: screen.cpp  screen.test.cpp
ch9/part-4/app/tests/: shaders-compiled.cmake
ch9/part-5/: README.md
(+153 files in other folders)
